test recherche perso

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,3 +1,19 @@
-<p>
-  character works!
-</p>
+<div class="container">
+  <h1>Rechercher un personnage !</h1>
+  <form id="searchCharac" class="form-group" (submit)="searchCharac()" #f="ngForm">
+    <div class="form-group">
+      <label>Entrez un nom de personnage de l'univers Star Wars : </label>
+      <input class="form-control" type="text" [(ngModel)]="search" name="search" required>
+      <button class="btn btn-primary" type="submit" [disabled]="f.invalid">La Recherche tu lanceras !</button>
+    </div>
+  </form>
+
+  <div *ngIf="research">
+    <div *ngFor="let charac of research.results">
+      <h2>{{charac.name}}</h2>
+      <p>Genre : {{charac.gender}}</p>
+      <p>Taille : {{charac.height}} cm</p>
+      <p>Poids : {{charac.mass}} kg</p>
+    </div>
+  </div>
+</div>
