modification du menu

--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -4,7 +4,8 @@
     <div class="form-group">
       <label>Entrez un nom de personnage de l'univers Star Wars : </label>
       <input class="form-control" type="text" [(ngModel)]="search" name="search" required>
-      <button class="btn btn-primary" type="submit" [disabled]="f.invalid">La Recherche tu lanceras !</button>
+      <br>
+      <button class="btn btn-primary" type="submit" [disabled]="f.invalid">La recherche tu lanceras !</button>
     </div>
   </form>
 
