--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,28 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/planet" routerLinkActive="active">Planètes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/character" routerLinkActive="active">Personnages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/film" routerLinkActive="active">Films</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/specie" routerLinkActive="active">Espèces</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/starship" routerLinkActive="active">Vaisseaux</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/vehicle" routerLinkActive="active">Véhicules</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="col-9">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/planet" routerLinkActive="active">Planètes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/character" routerLinkActive="active">Personnages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/film" routerLinkActive="active">Films</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/specie" routerLinkActive="active">Espèces</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/starship" routerLinkActive="active">Vaisseaux</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/vehicle" routerLinkActive="active">Véhicules</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <a routerLink="/wookie" routerLinkActive="active">Tu es un wookie ?</a>
+      </div>
+    </div>
+  </nav>
